--- a/ch3/src/main/resources/templates/fragments/headerinc.html
+++ b/ch3/src/main/resources/templates/fragments/headerinc.html
@@ -6,16 +6,16 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
     <!-- WebJars Version -->
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css"
-          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}"
+    <script src="http://cdn.jsdelivr.net/webjars/jquery/3.5.1/jquery.min.js"
+            th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
+
+    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/4.5.0/css/bootstrap.min.css"
+          th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}"
           rel="stylesheet" media="screen" />
 
-    <script src="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"
-            th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>
+    <script src="http://cdn.jsdelivr.net/webjars/bootstrap/4.5.0/js/bootstrap.min.js"
+            th:src="@{/webjars/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
 
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/3.2.0/jquery.min.js"
-            th:src="@{/webjars/jquery/3.2.0/jquery.min.js}"></script>
-            
     <link href="../static/css/styles.css"
           th:href="@{css/styles.css}" rel="stylesheet" media="screen"/>
 
