--- a/ch3/src/main/resources/templates/fragments/headerinc.html
+++ b/ch3/src/main/resources/templates/fragments/headerinc.html
@@ -11,13 +11,13 @@
 
     <link href="http://cdn.jsdelivr.net/webjars/bootstrap/4.5.0/css/bootstrap.min.css"
           th:href="@{/webjars/bootstrap/4.5.0/css/bootstrap.min.css}"
-          rel="stylesheet" media="screen" />
+          rel="stylesheet" media="screen" type="text/css"/>
 
     <script src="http://cdn.jsdelivr.net/webjars/bootstrap/4.5.0/js/bootstrap.min.js"
             th:src="@{/webjars/bootstrap/4.5.0/js/bootstrap.min.js}"></script>
 
     <link href="../static/css/styles.css"
-          th:href="@{css/styles.css}" rel="stylesheet" media="screen"/>
+          th:href="@{css/styles.css}" rel="stylesheet" media="screen" type="text/css"/>
 
     <!-- Non-WebJars -->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
